--- a/user-activation/app.css
+++ b/user-activation/app.css
@@ -1469,19 +1469,19 @@
   border: 2px dashed transparent;
 }
 
-.mobile-modal-open {
+.mobile-modal-light-open {
   overflow: hidden;
   touch-action: none;
   position: relative;
 }
 
-.mobile-modal-open #app {
+.mobile-modal-light-open #app {
   overflow: hidden !important;
   max-height: 100% !important;
   max-width: 100% !important;
 }
 
-.mobile-modal-overlay {
+.mobile-modal-light-overlay {
   position: fixed;
   touch-action: none;
   top: 0;
@@ -1489,9 +1489,10 @@
   right: 0;
   bottom: 0;
   background-color: rgba(11, 24, 35, 0.3);
+  cursor: pointer;
 }
 
-.mobile-modal {
+.mobile-modal-light {
   touch-action: none;
   position: fixed;
   z-index: 1000;
@@ -1501,7 +1502,7 @@
   filter: alpha(opacity=0);
   top: 0;
   left: 100%;
-  right: 0;
+  right: -100%;
   bottom: 0;
   background-color: white;
   display: flex;
@@ -1509,21 +1510,22 @@
   -moz-flex-direction: column;
   -webkit-flex-direction: column;
   flex-direction: column;
-  -ms-transition: left 0.3s ease, opacity 0.3s ease;
-  -moz-transition: left 0.3s ease, opacity 0.3s ease;
-  -webkit-transition: left 0.3s ease, opacity 0.3s ease;
-  transition: left 0.3s ease, opacity 0.3s ease;
+  -ms-transition: left 0.3s ease, opacity 0.3s ease, right 0.3s ease;
+  -moz-transition: left 0.3s ease, opacity 0.3s ease, right 0.3s ease;
+  -webkit-transition: left 0.3s ease, opacity 0.3s ease, right 0.3s ease;
+  transition: left 0.3s ease, opacity 0.3s ease, right 0.3s ease;
 }
 
-.mobile-modal.open {
+.mobile-modal-light.open {
   top: 0;
   left: 0;
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   filter: alpha(opacity=100);
+  right: 0;
 }
 
-.mobile-modal .modal-content {
+.mobile-modal-light .modal-content {
   overflow: auto;
   -ms-flex: auto 1 1;
   -moz-flex: auto 1 1;
@@ -1531,7 +1533,7 @@
   flex: auto 1 1;
 }
 
-.mobile-modal .modal-header .back-button img {
+.mobile-modal-light .modal-header .back-button img {
   height: 1rem;
   -ms-transform: rotateZ(270deg);
   -moz-transform: rotateZ(270deg);
@@ -1539,7 +1541,7 @@
   transform: rotateZ(270deg);
 }
 
-.mobile-modal .modal-header .back-button {
+.mobile-modal-light .modal-header .back-button {
   cursor: pointer;
   -ms-flex: 26px 0 0;
   -moz-flex: 26px 0 0;
@@ -1547,7 +1549,7 @@
   flex: 26px 0 0;
 }
 
-.mobile-modal .modal-header .modal-title {
+.mobile-modal-light .modal-header .modal-title {
   white-space: nowrap;
   text-align: center;
   color: white;
@@ -1557,7 +1559,7 @@
   flex: auto;
 }
 
-.mobile-modal .modal-header {
+.mobile-modal-light .modal-header {
   display: flex;
   border-bottom: 0;
   width: 100%;
@@ -1571,11 +1573,12 @@
   flex-shrink: 0;
 }
 
-.mobile-modal.contained.open {
+.mobile-modal-light.contained.open {
   top: 0;
+  bottom: 0;
 }
 
-.mobile-modal.contained .modal-content {
+.mobile-modal-light.contained .modal-content {
   overflow: auto;
   border-radius: 0;
   border: 0;
@@ -1585,7 +1588,7 @@
   flex-grow: 0;
 }
 
-.mobile-modal.contained .modal-header {
+.mobile-modal-light.contained .modal-header {
   visibility: hidden;
   -ms-flex-grow: 1;
   -moz-flex-grow: 1;
@@ -1593,19 +1596,21 @@
   flex-grow: 1;
 }
 
-.mobile-modal.contained {
+.mobile-modal-light.contained {
   top: 100%;
+  bottom: -100%;
   left: 0;
+  right: 0;
   padding: 30px;
   background: transparent;
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -ms-transition: top 0.3s ease, opacity 0.3s ease;
-  -moz-transition: top 0.3s ease, opacity 0.3s ease;
-  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
-  transition: top 0.3s ease, opacity 0.3s ease;
+  -ms-transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
+  -moz-transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
+  -webkit-transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
+  transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
 }
 
 .blue-progress-bar-holder .indicators {
@@ -3312,56 +3317,56 @@ footer .copyright {
   margin-bottom: 1.5rem;
 }
 
-.mobile-modal .attestation-modal.phone {
+.mobile-modal-light .attestation-modal.phone {
   padding: 20px;
   text-align: center;
 }
 
-.mobile-modal .attestation-modal.phone h2 {
+.mobile-modal-light .attestation-modal.phone h2 {
   padding-top: 7.5rem;
 }
 
-.mobile-modal .attestation-modal.phone .btn {
+.mobile-modal-light .attestation-modal.phone .btn {
   width: 100%;
   border-radius: 2rem;
   padding: 0.75rem;
 }
 
-.mobile-modal .attestation-modal.phone .verification-code .form-control {
+.mobile-modal-light .attestation-modal.phone .verification-code .form-control {
   display: inline-block;
 }
 
-.mobile-modal .attestation-modal.phone .country-code,
-.mobile-modal .attestation-modal.phone .form-control {
+.mobile-modal-light .attestation-modal.phone .country-code,
+.mobile-modal-light .attestation-modal.phone .form-control {
   border: solid 1px #c2cbd3;
   background-color: var(--white);
   color: black;
 }
 
-.mobile-modal .attestation-modal.phone .dropdown .dropdown-menu .dropdown-item .name {
+.mobile-modal-light .attestation-modal.phone .dropdown .dropdown-menu .dropdown-item .name {
   color: black;
 }
 
-.mobile-modal .attestation-modal.phone .dropdown .dropdown-menu .dropdown-item .prefix {
+.mobile-modal-light .attestation-modal.phone .dropdown .dropdown-menu .dropdown-item .prefix {
   color: #6f8294;
 }
 
-.mobile-modal .attestation-modal.phone .dropdown .dropdown-menu .dropdown-item:hover {
+.mobile-modal-light .attestation-modal.phone .dropdown .dropdown-menu .dropdown-item:hover {
   background-color: var(--light-footer);
 }
 
-.mobile-modal .attestation-modal.phone .dropdown .dropdown-menu {
+.mobile-modal-light .attestation-modal.phone .dropdown .dropdown-menu {
   border: solid 1px #c2cbd3;
   background-color: var(--white);
 }
 
-.mobile-modal .attestation-modal.phone .info .title {
+.mobile-modal-light .attestation-modal.phone .info .title {
   display: block;
   font-weight: bold;
   margin-bottom: 3px;
 }
 
-.mobile-modal .attestation-modal.phone .info {
+.mobile-modal-light .attestation-modal.phone .info {
   text-align: center;
   border-radius: 5px;
   border: solid 1px var(--bluey-grey);
@@ -3373,7 +3378,7 @@ footer .copyright {
   margin-top: 1rem;
 }
 
-.mobile-modal .attestation-modal.phone > div h2::before {
+.mobile-modal-light .attestation-modal.phone > div h2::before {
   background-image: url(images/identity/phone-icon-light.svg);
 }
 
@@ -7274,6 +7279,10 @@ svg.help-icon:hover path {
   }
 }
 
+#app {
+  overflow: hidden !important;
+}
+
 .dropdown.profile.show {
   background-color: black !important;
 }
@@ -7314,13 +7323,16 @@ svg.help-icon:hover path {
   border-bottom: 2px solid black;
 }
 
+.dropdown-menu.profile .active-wallet-info .connected > span > .wallet-icon.metamask {
+  background-image: url('images/metamask.svg');
+}
+
 .dropdown-menu.profile .active-wallet-info .connected > span > .wallet-icon {
   display: inline-block;
   width: 10px;
   height: 10px;
   margin-right: 4px;
   margin-left: 6px;
-  background-image: url('images/metamask.svg');
   background-size: 10px 10px;
 }
 
@@ -7369,9 +7381,10 @@ svg.help-icon:hover path {
   margin-bottom: 0.5rem;
 }
 
-.dropdown-menu.profile .identity-info .create-identity button {
+.dropdown-menu.profile .identity-info .create-identity .btn {
   border-radius: 2rem;
   padding: 0.5rem 1rem;
+  margin-bottom: 2.5rem;
   width: 100%;
 }
 
